Fix: decrease spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2935,7 +2935,7 @@ code {
   max-width: 110em;
 }
 #main > .inner > section {
-  padding: 6em 0 4em 0;
+  padding: 2em 0 0.1em 0;
   border-top: solid 2px rgba(210, 215, 217, 0.75);
 }
 #main > .inner > section:first-of-type {
@@ -2946,7 +2946,7 @@ code {
     padding: 0 5em 0.1em 5em;
   }
   #main > .inner > section {
-    padding: 5em 0 3em 0;
+    padding: 1.5em 0 0.1em 0;
   }
 }
 @media screen and (max-width: 1280px) {
@@ -2954,7 +2954,7 @@ code {
     padding: 0 4em 0.1em 4em;
   }
   #main > .inner > section {
-    padding: 4em 0 2em 0;
+    padding: 1.25em 0 0.1em 0;
   }
 }
 @media screen and (max-width: 736px) {
@@ -2962,7 +2962,7 @@ code {
     padding: 0 2em 0.1em 2em;
   }
   #main > .inner > section {
-    padding: 3em 0 1em 0;
+    padding: 1em 0 0.1em 0;
   }
 }
 
